# registry-cache

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: main.rs
src/api/: metrics.rs  mod.rs  routes.rs  server.rs  state.rs
src/api/registry/: blobs.rs  forward.rs  manifests.rs  mod.rs
src/config/: app.rs  db.rs  driver.rs  mod.rs
src/db/: db_health.rs  db_manifests.rs  mod.rs  pool.rs
src/driver/: mod.rs
src/error/: error_kind.rs  mod.rs  registry.rs
src/handlers/: mod.rs
src/handlers/command/: mod.rs
src/handlers/command/blob/: mod.rs  persist.rs  service.rs
src/handlers/command/filesystem/: mod.rs  persist.rs
src/metrics/: mod.rs
src/models/: commands.rs  events.rs  manifest_record.rs  mod.rs  types.rs
src/pubsub/: command.rs  command_bus.rs  mod.rs  subscriber.rs  worker.rs  worker_pool.rs
src/registry/: digest.rs  mod.rs  repository.rs  repository_error.rs
src/repository/: filesystem.rs  mod.rs
