# SPDX-License-Identifier: Apache-2.0
[package]
name = "pier-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# futures rust
futures = "^0"
futures-util = "^0"

# Web

# Actix
actix-web = { version = "^4", features = ["rustls-0_21", "cookies", "secure-cookies"] }
actix-files = "0.6.2"
# rustls = "0.20.8"
rustls = "^0"
rustls-pemfile = "^1"
url = "^2"

# Tokio
tokio = { version = "^1", features = ["full"] }
tokio-stream = { version = "^0", features = ["sync"] }
reqwest = { version = "^0", features = ["json", "gzip", "brotli", "deflate", "stream"] }

# Sqlite for persisting the mapping between tag name and digest
sqlx = { version = "^0", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "json" ] }

# YAML app_config file with reloading
config = "^0"
# to watch the app_config and autoreload
notify = "^6"

# crypto and crypto related crates
sha2 = "^0"
hex = "^0"

# Locking
parking_lot = "^0"

# aync trait
async-trait = "^0"

#Time
chrono = {version = "^0", features = ["serde"]}

# Logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-attributes = "^0"

# Do not log secrets
secrecy = { version = "^0", features = ["serde"] }

prometheus = { version = "0", features = ["process"] }

# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

# number of CPUs
num_cpus = "^1"

# Regex
regex = "^1"
lazy_static = "^1"

# Strum
strum_macros = "^0"
strum = { version = "^0", features = ["derive"] }
log = "0.4.20"
bytes = "1.5.0"
tokio-util = "0.7.9"